--- a/demo/src/main/resources/templates/mostrar_mascota.html
+++ b/demo/src/main/resources/templates/mostrar_mascota.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Información de tu Peludito</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/css/pet_table.css" />
   </head>
   <body>
@@ -25,5 +28,11 @@
         </div>
       </div>
     </div>
+    <div class="d-flex justify-content-center mt-4">
+      <a href="/mascota/all" class="btn btn-primary btn-details">Volver a Lista de Mascotas</a>
+    </div>
+
+
+
   </body>
 </html>
