--- a/demo/src/main/resources/templates/crear_mascota.html
+++ b/demo/src/main/resources/templates/crear_mascota.html
@@ -7,73 +7,79 @@
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/css/form_styles.css" />
   </head>
   <body>
-    <form th:object="${mascota}" th:action="@{/mascota/agregar}" method="post">
-      <div class="form-group">
-        <label for="nombre">Nombre:</label>
-        <input
-          th:field="*{nombre}"
-          type="text"
-          id="nombre"
-          placeholder="Ingresa el nombre" />
-      </div>
+    <div class="form-container">
+      <form
+        th:object="${mascota}"
+        th:action="@{/mascota/agregar}"
+        method="post">
+        <div class="form-group">
+          <label for="nombre">Nombre:</label>
+          <input
+            th:field="*{nombre}"
+            type="text"
+            id="nombre"
+            placeholder="Ingresa el nombre" />
+        </div>
 
-      <div class="form-group">
-        <label for="raza">Raza:</label>
-        <input
-          th:field="*{raza}"
-          type="text"
-          id="raza"
-          placeholder="Ingresa la raza" />
-      </div>
+        <div class="form-group">
+          <label for="raza">Raza:</label>
+          <input
+            th:field="*{raza}"
+            type="text"
+            id="raza"
+            placeholder="Ingresa la raza" />
+        </div>
 
-      <div class="form-group">
-        <label for="edad">Edad:</label>
-        <input
-          th:field="*{edad}"
-          type="number"
-          id="edad"
-          placeholder="Ingresa edad en años" />
-      </div>
+        <div class="form-group">
+          <label for="edad">Edad:</label>
+          <input
+            th:field="*{edad}"
+            type="number"
+            id="edad"
+            placeholder="Ingresa edad en años" />
+        </div>
 
-      <div class="form-group">
-        <label for="peso">Peso:</label>
-        <input
-          th:field="*{peso}"
-          type="number"
-          id="peso"
-          placeholder="Ingresa el peso" />
-      </div>
+        <div class="form-group">
+          <label for="peso">Peso:</label>
+          <input
+            th:field="*{peso}"
+            type="number"
+            id="peso"
+            placeholder="Ingresa el peso" />
+        </div>
 
-      <div class="form-group">
-        <label for="enfermedad">Enfermedad:</label>
-        <input
-          th:field="*{enfermedad}"
-          type="text"
-          id="enfermedad"
-          placeholder="Ingresa la enfermedad" />
-      </div>
+        <div class="form-group">
+          <label for="enfermedad">Enfermedad:</label>
+          <input
+            th:field="*{enfermedad}"
+            type="text"
+            id="enfermedad"
+            placeholder="Ingresa la enfermedad" />
+        </div>
 
-      <div class="form-group">
-        <label for="foto">Foto:</label>
-        <input
-          th:field="*{foto}"
-          type="text"
-          id="foto"
-          placeholder="Ingresa la URL de la foto" />
-      </div>
+        <div class="form-group">
+          <label for="foto">Foto:</label>
+          <input
+            th:field="*{foto}"
+            type="text"
+            id="foto"
+            placeholder="Ingresa la URL de la foto" />
+        </div>
 
-      <div class="form-group">
-        <label for="estado">Estado:</label>
-        <input
-          th:field="*{estado}"
-          type="text"
-          id="estado"
-          placeholder="Ingresa el estado" />
-      </div>
+        <div class="form-group">
+          <label for="estado">Estado:</label>
+          <input
+            th:field="*{estado}"
+            type="text"
+            id="estado"
+            placeholder="Ingresa el estado" />
+        </div>
 
-      <button type="submit" class="btn btn-primary">Crear Mascota</button>
-    </form>
+        <button type="submit" class="btn-submit">Crear Mascota</button>
+      </form>
+    </div>
   </body>
 </html>
