--- a/demo/src/main/resources/templates/index.html
+++ b/demo/src/main/resources/templates/index.html
@@ -42,10 +42,15 @@
               src="https://raw.githubusercontent.com/lucide-icons/lucide/main/icons/shopping-cart.svg"
               alt="Cart" />
           </div>
-          <img
-            src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?w=100"
-            alt="Profile"
-            class="profile-pic" />
+          <div class="profile-container">
+            <img
+              src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?w=100"
+              alt="Profile"
+              class="profile-pic" />
+            <div class="profile-dropdown">
+              <a href="/login" class="login-btn">Iniciar sesión</a>
+            </div>
+          </div>
         </div>
       </div>
     </nav>
