--- a/demo/src/main/resources/templates/login_user.html
+++ b/demo/src/main/resources/templates/login_user.html
@@ -37,6 +37,9 @@
                 </div>
                 <button type="submit">Ingresar</button>
             </form>
+            <div class="back-to-home">
+                <a href="/" class="home-link">Volver al inicio</a>
+            </div>
         </div>
         <div class="image-container">
             <img src="https://images.unsplash.com/photo-1518020382113-a7e8fc38eac9?q=80&w=2776&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" 
