--- a/demo/src/main/resources/templates/modificar_mascota.html
+++ b/demo/src/main/resources/templates/modificar_mascota.html
@@ -78,6 +78,15 @@
             placeholder="Ingresa el estado" />
         </div>
 
+        <div class="form-group">
+          <label for="cedulaCliente">Cedula del Cliente:</label>
+          <input
+            th:field="*{cedulaCliente}"
+            type="text"
+            id="cedulaCliente"
+            placeholder="Ingresa la cedula del cliente" />
+        </div>
+
         <button type="submit" class="btn-submit">Actualizar Mascota</button>
       </form>
     </div>
