--- a/demo/src/main/resources/templates/mostrar_mascota.html
+++ b/demo/src/main/resources/templates/mostrar_mascota.html
@@ -25,6 +25,7 @@
           <p><span class="label">Raza:</span> <span th:text="${mascota.raza}"></span></p>
           <p><span class="label">Enfermedad:</span> <span th:text="${mascota.enfermedad}"></span></p>
           <p><span class="label">Estado:</span> <span th:text="${mascota.estado}" class="status"></span></p>
+          <p><span class="label">Cedula del Cliente:</span> <span th:text="${mascota.cedulaCliente}"></span></p>
         </div>
       </div>
     </div>
