--- a/demo/src/main/resources/templates/crear_mascota.html
+++ b/demo/src/main/resources/templates/crear_mascota.html
@@ -77,6 +77,15 @@
             id="estado"
             placeholder="Ingresa el estado" />
         </div>
+        
+        <div class="form-group">
+          <label for="cedulaCliente">Cedula del Cliente:</label>
+          <input
+            th:field="*{cedulaCliente}"
+            type="text"
+            id="cedulaCliente" 
+            placeholder="Ingresa la cedula del cliente" />
+        </div>
 
         <button type="submit" class="btn-submit">Crear Mascota</button>
       </form>
