--- a/demo/src/main/resources/static/css/multi_pet_table.css
+++ b/demo/src/main/resources/static/css/multi_pet_table.css
@@ -118,3 +118,16 @@ h2 {
     padding: 0.5rem;
   }
 }
+
+/* Add specific styles for small-pet-container images */
+#small-pet-container .pet-image {
+  width: 80px;
+  height: 80px;
+}
+
+#small-pet-container .pet-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 0.5rem;
+}
