--- a/demo/src/main/resources/templates/mostrar_cliente.html
+++ b/demo/src/main/resources/templates/mostrar_cliente.html
@@ -8,9 +8,10 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/css/pet_table.css" />
+    <link rel="stylesheet" href="/css/multi_pet_table.css" />
   </head>
   <body>
-    <div class="pet-container">
+    <div class="pet-container" id="small-pet-container">
       <h1>Información del Cliente</h1>
       <div class="pet-card">
         <div class="pet-info">
