feature:log-out

--- a/demo/src/main/resources/templates/mostrar_cliente.html
+++ b/demo/src/main/resources/templates/mostrar_cliente.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="/css/multi_pet_table.css" />
   </head>
   <body>
+    <div style="text-align: right; padding: 10px;">
+        <a href="/logout" class="logout-btn" style="padding: 8px 15px; background-color: #fc7a43; color: white; text-decoration: none; border-radius: 5px;">Cerrar Sesión</a>
+    </div>
+
     <div class="pet-container" id="small-pet-container">
       <h1>Información del Cliente</h1>
       <div class="pet-card">
