--- a/demo/src/main/resources/templates/crear_cliente.html
+++ b/demo/src/main/resources/templates/crear_cliente.html
@@ -51,6 +51,24 @@
             placeholder="Ingresa el celular" />
         </div>
 
+        <div class="form-group">
+          <label for="contrasena">Contraseña:</label>
+          <input
+            th:field="*{contrasena}"
+            type="password"
+            id="contrasena"
+            placeholder="Ingresa la contraseña" />
+        </div>
+
+        <div class="form-group">
+          <label for="confirmPassword">Confirmar Contraseña:</label>
+          <input
+            name="confirmPassword"
+            type="password"
+            id="confirmPassword"
+            placeholder="Confirma la contraseña" />
+        </div>
+
         <button type="submit" class="btn-submit">Crear Cliente</button>
       </form>
     </div>
