bugfix: functionality working as expected now via database relationship h2 jpa

--- a/demo/src/main/resources/templates/CRUD_mascotas.html
+++ b/demo/src/main/resources/templates/CRUD_mascotas.html
@@ -45,7 +45,7 @@
                 width="100"
                 height="100" />
             </td>
-            <td th:text="${mascota.estado}"></td>
+            <td th:text="${mascota.estadoTexto}"></td>
             <td th:text="${mascota.cliente != null ? mascota.cliente.cedula : ''}"></td>
 
             <td>
