--- a/demo/src/main/resources/templates/crear_mascota.html
+++ b/demo/src/main/resources/templates/crear_mascota.html
@@ -85,13 +85,10 @@
 
         <div class="form-group">
           <label for="estado">Estado:</label>
-          <input
-            th:field="*{estado}"
-            type="text"
-            class="form-control"
-            id="estado"
-            placeholder="Ingresa el estado"
-            required />
+          <select th:field="*{estado}" class="form-control" id="estado" required>
+            <option value="true">Activo</option>
+            <option value="false">Inactivo</option>
+          </select>
         </div>
         
         <div class="form-group">
