--- a/demo/src/main/resources/templates/mostrar_todas_mascotas.html
+++ b/demo/src/main/resources/templates/mostrar_todas_mascotas.html
@@ -43,7 +43,7 @@
                 width="100"
                 height="100" />
             </td>
-            <td th:text="${mascota.enfermedad}"></td>
+            <td th:text="${mascota.estadoTexto}"></td>
 
           </tr>
         </tbody>
