--- a/demo/src/main/resources/templates/modificar_cliente.html
+++ b/demo/src/main/resources/templates/modificar_cliente.html
@@ -34,6 +34,17 @@
           method="post">
           <div class="form-grid">
             <div class="form-group">
+              <label for="cedula">Cédula</label>
+              <div class="input-container">
+                <i data-lucide="user" class="input-icon"></i>
+                <input
+                  th:field="*{cedula}"
+                  type="text"
+                  id="cedula"
+                  placeholder="Ingresa la cédula" />
+              </div>
+            </div>
+            <div class="form-group">
               <label for="nombre">Nombre</label>
               <div class="input-container">
                 <i data-lucide="user" class="input-icon"></i>
